<resources>
    <string name="app_name">ColorPicker</string>
    <string name="welcomeText">Colour Picker App</string>
    <string name="toHex">Hexadecimal</string>
    <string name="toRGB">RGB</string>
    <string name="menu">Iniciar</string>
    <string name="red">Red:</string>
    <string name="blue">Blue:</string>
    <string name="green">Green:</string>
    <string name="demoText">Demo text</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="hashtag">Hex:</string>
    <string name="barRGB">Barras RGB</string>
    <string name="chooseOption">Elegir una opcion: </string>
    <string name="desc">FreeIcon</string>
    <string name="createdBy">Elena Cirstea</string>
</resources>